--- a/index.html
+++ b/index.html
@@ -451,15 +451,15 @@
     <!-- Modal para subir certificados -->
     <div id="uploadModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
         <div class="bg-white rounded-xl p-6 max-w-md w-full">
-            <h3 class="text-xl font-bold text-gray-800 mb-4">Subir Nuevo Certificado</h3>
+            <h3 class="text-xl font-bold text-gray-800 mb-4">Subir Nuevo Certificado (PNG)</h3>
             <form id="uploadForm">
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Código del Certificado</label>
                     <input type="text" class="w-full px-4 py-2 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-4">
-                    <label class="block text-gray-700 mb-2">Archivo PDF</label>
-                    <input type="file" class="w-full px-4 py-2 border border-gray-300 rounded-lg" accept=".pdf" required>
+                    <label class="block text-gray-700 mb-2">Imagen del Certificado (PNG)</label>
+                    <input type="file" class="w-full px-4 py-2 border border-gray-300 rounded-lg" accept=".png" required>
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Datos del Certificado (JSON)</label>
@@ -643,7 +643,7 @@
             // Descargar PDF (simulado)
             downloadBtn.addEventListener('click', function() {
                 // En una implementación real, esto generaría o descargaría un PDF
-                alert('Descargando certificado PDF... (simulación)');
+                alert('Descargando certificado PNG... (simulación)');
             });
 
             // Acceso para subir certificados
