--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
     <!-- Header with Logo -->
     <header class="bg-white shadow-sm py-4">
         <div class="container mx-auto px-4">
-            <div class="flex justify-center mb-6">
-                <!-- Logo Space - Replace with your actual logo -->
-                <div class="w-64 h-32 bg-emerald-100 flex items-center justify-center rounded-lg border border-emerald-300">
-                    <span class="text-emerald-800 font-bold text-xl">LOGO DE LA TIENDA</span>
-                </div>
+         <!-- Logo Space -->
+<div class="flex justify-center mb-6">
+    <img src="https://misimagenes.com/logo.png" 
+         alt="Logo de la Tienda" 
+         class="w-64 h-32 object-contain bg-white rounded-lg border border-emerald-300 p-2 shadow-sm">
+</div>
+
             </div>
             
             <!-- Search Bar -->
