--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container mx-auto px-4">
          <!-- Logo Space -->
 <div class="flex justify-center mb-6">
-    <img src="https://misimagenes.com/logo.png" 
+    <img src="imagenes/logo.png"> 
          alt="Logo de la Tienda" 
          class="w-64 h-32 object-contain bg-white rounded-lg border border-emerald-300 p-2 shadow-sm">
 </div>
