--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     <header class="bg-white shadow-sm py-4">
         <div class="container mx-auto px-4">
          <!-- Logo Space -->
+<!-- Logo Space -->
 <div class="flex justify-center mb-6">
-    <img src="imagenes/logo.png"> 
+    <img src="https://i.imgur.com/15Cqa82.png" 
          alt="Logo de la Tienda" 
          class="w-64 h-32 object-contain bg-white rounded-lg border border-emerald-300 p-2 shadow-sm">
 </div>
+
 
             </div>
             
