--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
         <div class="container mx-auto px-4">
          <!-- Logo Space -->
 <!-- Logo Space -->
+<!-- Logo Space -->
 <div class="flex justify-center mb-6">
     <img src="https://i.imgur.com/15Cqa82.png" 
          alt="Logo de la Tienda" 
-         class="w-64 h-32 object-contain bg-white rounded-lg border border-emerald-300 p-2 shadow-sm">
+         class="max-w-full h-auto object-contain p-2 bg-white rounded-lg shadow-sm">
 </div>
+
 
 
             </div>
