--- a/cuidados.html
+++ b/cuidados.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cuidados Especiales</title>
+</head>
+<body>
+    <h1>Cuidados Especiales</h1>
+    <p>Aquí irá la información sobre cuidados especiales para las joyas.</p>
+</body>
+</html>
