--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <main>
         <section class="buscador">
-            <input type="text" id="codigoBusqueda" placeholder="Ingrese código">
+            <input type="text" id="codigoBusqueda" placeholder="2085">
             <button onclick="buscarCertificado()">Buscar</button>
         </section>
 
         <section id="resultado">
             <div class="imagenes">
-                <img id="imgFrente" src="" alt="Frente">
-                <img id="imgReverso" src="" alt="Reverso">
+                <img id="imgFrente" src="" alt="https://i.imgur.com/BFagvjv.png">
+                <img id="imgReverso" src="" alt="https://i.imgur.com/H1R6Hd0.png">
             </div>
 
             <table id="tablaDatos">
