--- a/index.html
+++ b/index.html
@@ -99,11 +99,16 @@
     </a>
 
     <!-- Header with Logo and Search -->
-    <header class="gradient-bg py-0 shadow-md">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col items-center">
-                <!-- Logo - Updated with your logo -->
-                <img src="https://i.imgur.com/d65hZqr.png" alt="Joyeria de Esmeraldas" class="h-80 mb-0">
+   <header class="gradient-bg shadow-md overflow-hidden" style="height: 220px;">
+    <div class="container mx-auto px-4">
+        <div class="flex flex-col items-center">
+            <img src="https://i.imgur.com/d65hZqr.png" 
+                 alt="Joyeria de Esmeraldas" 
+                 class="h-80 -mt-10">
+        </div>
+    </div>
+</header>
+
                 
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
