--- a/index.html
+++ b/index.html
@@ -99,16 +99,28 @@
     </a>
 
     <!-- Header with Logo and Search -->
-   <header class="gradient-bg shadow-md overflow-hidden" style="height: 220px;">
+   <header class="gradient-bg shadow-md">
     <div class="container mx-auto px-4">
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col md:flex-row items-center justify-between py-2">
+            
+            <!-- Logo -->
             <img src="https://i.imgur.com/d65hZqr.png" 
                  alt="Joyeria de Esmeraldas" 
-                 class="h-80 -mt-10">
+                 class="h-80 mb-4 md:mb-0">
+
+            <!-- Buscador -->
+            <div class="flex items-center space-x-2">
+                <input type="text" id="codigoBusqueda" placeholder="Ingrese código"
+                       class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring focus:ring-emerald-300">
+                <button onclick="buscarCertificado()" 
+                        class="bg-emerald-600 text-white px-4 py-2 rounded hover:bg-emerald-700">
+                    Buscar
+                </button>
+            </div>
+
         </div>
     </div>
 </header>
-
                 
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
