--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
     <!-- Header with Logo and Search -->
    <header class="gradient-bg shadow-md">
     <div class="container mx-auto px-4">
-        <div class="flex flex-col md:flex-row items-center justify-between py-2">
+        <div class="flex flex-col items-center py-2">
             
-            <!-- Logo -->
+            <!-- Logo grande -->
             <img src="https://i.imgur.com/d65hZqr.png" 
                  alt="Joyeria de Esmeraldas" 
-                 class="h-80 mb-4 md:mb-0">
+                 class="h-80 mb-4">
 
-            <!-- Buscador -->
+            <!-- Buscador centrado -->
             <div class="flex items-center space-x-2">
                 <input type="text" id="codigoBusqueda" placeholder="Ingrese código"
                        class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring focus:ring-emerald-300">
@@ -121,6 +121,7 @@
         </div>
     </div>
 </header>
+
                 
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
