--- a/index.html
+++ b/index.html
@@ -101,15 +101,32 @@
     <!-- Header with Logo and Search -->
    <!-- Header con logo ajustado -->
 <header class="gradient-bg shadow-md py-0">
-    <div class="container mx-auto px-4">
-        <div class="flex flex-col items-center">
-            <!-- Logo grande pero sin márgenes extras -->
-            <img src="https://i.imgur.com/d65hZqr.png" 
-                 alt="Joyeria de Esmeraldas" 
-                 class="h-80 my-0">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-col items-center">
+
+      <!-- Logo grande -->
+      <img src="https://i.imgur.com/d65hZqr.png"
+           alt="Joyeria de Esmeraldas"
+           class="h-80 my-0">
+
+      <!-- Search by Certificate Code (único, centrado debajo del logo) -->
+      <div class="w-full max-w-md mt-4">
+        <div class="relative">
+          <input type="text" id="certificateSearch" placeholder="Buscar certificado por código"
+                 class="w-full px-4 py-3 rounded-full border-2 border-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500"
+                 aria-label="Buscar certificado por código">
+          <button onclick="searchCertificate()"
+                  class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-emerald-700 text-white px-4 py-2 rounded-full hover:bg-emerald-800 transition"
+                  aria-label="Buscar">
+            <i class="fas fa-search"></i>
+          </button>
         </div>
+      </div>
+
     </div>
-</header> 
+  </div>
+</header>
+
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
                     <div class="relative">
