--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="container mx-auto px-4">
     <div class="flex flex-col items-center -mt-2 -mb-2"> <!-- menos margen negativo -->
       <!-- Logo grande -->
-      <img src="https://i.imgur.com/d65hZqr.png"
+      <img src="https://i.imgur.com/WVRxv2z.png"
            alt="Joyeria de Esmeraldas"
            class="h-72 my-0 -mt-4 -mb-4"> <!-- quita más espacio arriba y abajo -->
 
