--- a/index.html
+++ b/index.html
@@ -99,32 +99,27 @@
     </a>
 
     <!-- Header with Logo and Search -->
-<!-- Header with Logo and Search -->
-<header class="gradient-bg shadow-md py-0">
-  <div class="container mx-auto px-4">
-    <div class="flex flex-col items-center -mt-2 -mb-2"> <!-- menos margen negativo -->
-      <!-- Logo grande -->
-      <img src="https://i.imgur.com/WVRxv2z.png"
-           alt="Joyeria de Esmeraldas"
-           class="h-72 my-0 -mt-4 -mb-4"> <!-- quita más espacio arriba y abajo -->
-
-      <!-- Search by Certificate Code -->
-      <div class="w-full max-w-md mt-1"> <!-- menos separación del buscador -->
-        <div class="relative">
-          <input type="text" id="certificateSearch" placeholder="Buscar certificado por código"
-                 class="w-full px-4 py-3 rounded-full border-2 border-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500"
-                 aria-label="Buscar certificado por código">
-          <button onclick="searchCertificate()"
-                  class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-emerald-700 text-white px-4 py-2 rounded-full hover:bg-emerald-800 transition"
-                  aria-label="Buscar">
-            <i class="fas fa-search"></i>
-          </button>
+ <header class="gradient-bg py-6 shadow-md">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col items-center">
+                <!-- Logo - Updated with your logo -->
+                <img src="https://i.imgur.com/mrWg3PS.png" alt="Joyeria de Esmeraldas" class="h-32 mb-6">
+                
+                <!-- Search by Certificate Code -->
+                <div class="w-full max-w-md">
+                    <div class="relative">
+                        <input type="text" id="certificateSearch" placeholder="Buscar certificado por código"
+                                class="w-full px-4 py-3 rounded-full border-2 border-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500">
+                        <button onclick="searchCertificate()"
+                                class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-emerald-700 text-white px-4 py-2 rounded-full hover:bg-emerald-800 transition">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </header>
 
-    </div>
-  </div>
-</header>
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-8">
