--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col items-center">
                 <!-- Logo - Updated with your logo -->
-                <img src="https://i.imgur.com/mrWg3PS.png" alt="Joyeria de Esmeraldas" class="h-64 mb-1">
+                <img src="https://i.imgur.com/7ySsxSp.png" alt="Joyeria de Esmeraldas" class="h-64 mb-1">
                 
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
