--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="gradient-bg py-8 text-white">
+    <footer class="bg-emerald-900 py-8 text-white">
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
