--- a/index.html
+++ b/index.html
@@ -99,11 +99,21 @@
     </a>
 
     <!-- Header with Logo and Search -->
- <header class="bg-emerald-900 py-1 shadow-md">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col items-center">
-                <!-- Logo - Updated with your logo -->
-                <img src="https://i.imgur.com/7ySsxSp.png" alt="Joyeria de Esmeraldas" class="h-64 mb-1">
+ <header class="py-1 shadow-md" style="
+    background-color: #064e3b;
+    background-image: url('data:image/svg+xml;utf8,
+        <svg xmlns=%27http://www.w3.org/2000/svg%27 width=%2720%27 height=%2720%27>
+            <circle cx=%2710%27 cy=%2710%27 r=%272%27 fill=%27gold%27 opacity=%270.2%27/>
+        </svg>');
+    background-repeat: repeat;
+">
+    <div class="container mx-auto px-4">
+        <div class="flex flex-col items-center">
+            <img src="https://i.imgur.com/7ySsxSp.png" alt="Joyeria de Esmeraldas" class="h-64 mb-1">
+        </div>
+    </div>
+</header>
+
                 
                 <!-- Search by Certificate Code -->
                 <div class="w-full max-w-md">
