--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </a>
     
 <!-- Header with Logo and Search -->
- <header class="bg-emerald-900 py-1 shadow-md">
+ <header class="gradient-bg py-1 shadow-md">
         <div class="container mx-auto px-4">
             <div class="flex flex-col items-center">
                 <!-- Logo - Updated with your logo -->
