--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                     <div>
                         <div class="grid grid-cols-3 gap-4 mb-6">
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="emerald">
-                                <img src="https://via.placeholder.com/100x100?text=Emerald" alt="Emerald Cut" class="mx-auto mb-2">
-                                <p>Emerald</p>
+                                <img src="https://i.imgur.com/nYwSbAw.png/100x100?text=Emerald" alt="Emerald Cut" class="mx-auto mb-2">
+                                <p>Rectangular</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="oval">
                                 <img src="https://via.placeholder.com/100x100?text=Oval" alt="Oval Cut" class="mx-auto mb-2">
