--- a/index.html
+++ b/index.html
@@ -324,24 +324,24 @@
                                 <p>Rectangular</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="oval">
-                                <img src="https://via.placeholder.com/100x100?text=Oval" alt="Oval Cut" class="mx-auto mb-2">
-                                <p>Oval</p>
+                                <img src="https://i.imgur.com/ltuO7pR.png/100x100?text=Oval" alt="Oval Cut" class="mx-auto mb-2">
+                                <p>Ovalada</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="round">
-                                <img src="https://via.placeholder.com/100x100?text=Round" alt="Round Cut" class="mx-auto mb-2">
-                                <p>Round</p>
+                                <img src="https://i.imgur.com/PSAR2Ct.png/100x100?text=Round" alt="Round Cut" class="mx-auto mb-2">
+                                <p>Redonda</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="pear">
-                                <img src="https://via.placeholder.com/100x100?text=Pear" alt="Pear Cut" class="mx-auto mb-2">
-                                <p>Pear</p>
+                                <img src="https://i.imgur.com/OFlsNHU.png/100x100?text=Pear" alt="Pear Cut" class="mx-auto mb-2">
+                                <p>Lágrima</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="cushion">
-                                <img src="https://via.placeholder.com/100x100?text=Cushion" alt="Cushion Cut" class="mx-auto mb-2">
-                                <p>Cushion</p>
+                                <img src="https://i.imgur.com/mpoogcS.png/100x100?text=Cushion" alt="Cushion Cut" class="mx-auto mb-2">
+                                <p>Cadrada</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="heart">
-                                <img src="https://via.placeholder.com/100x100?text=Heart" alt="Heart Cut" class="mx-auto mb-2">
-                                <p>Heart</p>
+                                <img src="https://i.imgur.com/M0AXJ0Z.png/100x100?text=Heart" alt="Heart Cut" class="mx-auto mb-2">
+                                <p>Corazón</p>
                             </div>
                         </div>
                                                                 
@@ -384,7 +384,7 @@
                     </div>
                     <div class="flex items-center justify-center">
                         <div id="shapeDisplay" class="relative">
-                            <img src="https://via.placeholder.com/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
+                            <img src="https://i.imgur.com/3Wd0GoP.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
                             <div id="dimensionDisplay" class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white p-2 rounded-b-lg">
                                 <p class="text-center">6.5mm × 5mm × 3.5mm ≈ 1.0 ct</p>
                             </div>
