--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             
             <!-- Emerald Shape Simulator -->
             <div class="mb-10">
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Simulador de talla y forma de esmeralda</h3>
+                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Forma de esmeralda</h3>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div>
                         <div class="grid grid-cols-3 gap-4 mb-6">
@@ -384,7 +384,7 @@
                     </div>
                     <div class="flex items-center justify-center">
                         <div id="shapeDisplay" class="relative">
-                            <img src="https://i.imgur.com/3Wd0GoP.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
+                            <img src="https://i.imgur.com/Tx2hNlu.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
                             <div id="dimensionDisplay" class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white p-2 rounded-b-lg">
                                 <p class="text-center">6.5mm × 5mm × 3.5mm ≈ 1.0 ct</p>
                             </div>
