--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
                                 <div>
                                     <label class="block text-gray-700 mb-1">Forma</label>
                                     <select id="shape" class="w-full px-3 py-2 border border-gray-300 rounded">
-                                        <option value="emerald">Emerald</option>
-                                        <option value="oval">Oval</option>
-                                        <option value="round">Round</option>
-                                        <option value="pear">Pear</option>
-                                        <option value="cushion">Cushion</option>
-                                        <option value="heart">Heart</option>
+                                        <option value="rectangular">Rectangular</option>
+                                        <option value="ovalada">Ovalada</option>
+                                        <option value="redonda">Redonda</option>
+                                        <option value="lágrima">Lágrima</option>
+                                        <option value="cuadrada">Cuadrada</option>
+                                        <option value="corazón">Corazón</option>
                                     </select>
                                 </div>
                             </div>
