--- a/index.html
+++ b/index.html
@@ -321,27 +321,27 @@
                         <div class="grid grid-cols-3 gap-4 mb-6">
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="emerald">
                                 <img src="https://i.imgur.com/nYwSbAw.png/100x100?text=Emerald" alt="Emerald Cut" class="mx-auto mb-2">
-                                <p>Rectangular</p>
+                                <p>Rectangular-Emerald</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="oval">
                                 <img src="https://i.imgur.com/ltuO7pR.png/100x100?text=Oval" alt="Oval Cut" class="mx-auto mb-2">
-                                <p>Ovalada</p>
+                                <p>Ovalada-Oval</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="round">
                                 <img src="https://i.imgur.com/PSAR2Ct.png/100x100?text=Round" alt="Round Cut" class="mx-auto mb-2">
-                                <p>Redonda</p>
+                                <p>Redonda-Round</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="pear">
                                 <img src="https://i.imgur.com/OFlsNHU.png/100x100?text=Pear" alt="Pear Cut" class="mx-auto mb-2">
-                                <p>Lágrima</p>
+                                <p>Pera-Pear</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="cushion">
                                 <img src="https://i.imgur.com/mpoogcS.png/100x100?text=Cushion" alt="Cushion Cut" class="mx-auto mb-2">
-                                <p>Cadrada</p>
+                                <p>Cojin-Cushion</p>
                             </div>
                             <div class="shape-selector cursor-pointer p-3 rounded-lg border border-gray-200 text-center" data-shape="heart">
                                 <img src="https://i.imgur.com/M0AXJ0Z.png/100x100?text=Heart" alt="Heart Cut" class="mx-auto mb-2">
-                                <p>Corazón</p>
+                                <p>Corazón-Heart</p>
                             </div>
                         </div>
                                                                 
