--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <div id="shapeDisplay" class="relative">
                             <img src="https://i.imgur.com/Tx2hNlu.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
                             <div id="dimensionDisplay" class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white p-2 rounded-b-lg">
-                                <p class="text-center">6.5mm × 5mm × 3.5mm ≈ 1.0 ct</p>
+                                <p class="text-center">.</p>
                             </div>
                         </div>
                     </div>
