--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                     </div>
                     <div class="flex items-center justify-center">
                         <div id="shapeDisplay" class="relative">
-                            <img src="https://i.imgur.com/Tx2hNlu.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
+                            <img src="https://i.imgur.com/qeleK4t.png/300x300?text=Emerald+Cut" alt="Selected Shape" class="rounded-lg shadow-lg">
                             <div id="dimensionDisplay" class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white p-2 rounded-b-lg">
                                 <p class="text-center">.</p>
                             </div>
