--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@
                                 <div>
                                     <label class="block text-gray-700 mb-1">Forma</label>
                                    <select id="shape" class="w-full px-3 py-2 border border-gray-300 rounded">
-                                       <option value="emerald">Rectangular</option>
-                                       <option value="oval">Ovalada</option>
-                                       <option value="round">Redonda</option>
-                                       <option value="pear">Lágrima</option>
-                                       <option value="cushion">Cuadrada</option>
-                                       <option value="heart">Corazón</option>
-                                   </select>
+    <option value="rectangular">Rectangular</option>
+    <option value="ovalada">Ovalada</option>
+    <option value="redonda">Redonda</option>
+    <option value="lágrima">Lágrima</option>
+    <option value="cuadrada">Cuadrada</option>
+    <option value="corazón">Corazón</option>
+</select>
 
                                 </div>
                             </div>
@@ -794,49 +794,50 @@
         });
 
         function calculateCarats() {
-    const length = parseFloat(document.getElementById('length').value) || 0;
-    const width = parseFloat(document.getElementById('width').value) || 0;
-    const depth = parseFloat(document.getElementById('depth').value) || 0;
+    const length = parseFloat(document.getElementById('length').value);
+    const width = parseFloat(document.getElementById('width').value);
+    const depth = parseFloat(document.getElementById('depth').value);
     const shape = document.getElementById('shape').value;
 
-    if (length <= 0 || width <= 0 || depth <= 0) {
-        alert('Por favor ingresa valores positivos para las dimensiones');
+    if (isNaN(length) || length <= 0 || isNaN(width) || width <= 0 || isNaN(depth) || depth <= 0) {
+        alert('Por favor ingresa valores válidos y mayores que cero para todas las dimensiones.');
         return;
     }
 
     let carats = 0;
 
     switch (shape) {
-    case 'rectangular': // emerald
-        carats = length * width * depth * 0.0027 * 1.7;
-        break;
-    case 'ovalada':
-        carats = length * width * depth * 0.0027;
-        break;
-    case 'redonda':
-        const avgDiameter = (length + width) / 2;
-        carats = avgDiameter * avgDiameter * depth * 0.002;
-        break;
-    case 'lágrima':
-        carats = length * width * depth * 0.0026;
-        break;
-    case 'cuadrada':
-        carats = length * width * depth * 0.0027 * 1.6;
-        break;
-    case 'corazón':
-        carats = length * width * depth * 0.0027;
-        break;
-    default:
-        alert('Por favor selecciona una forma válida.');
-        return;
-}
+        case 'rectangular':
+            carats = length * width * depth * 0.0027 * 1.7;
+            break;
+        case 'ovalada':
+            carats = length * width * depth * 0.0027;
+            break;
+        case 'redonda':
+            const avgDiameter = (length + width) / 2;
+            carats = avgDiameter * avgDiameter * depth * 0.002;
+            break;
+        case 'lágrima':
+            carats = length * width * depth * 0.0026;
+            break;
+        case 'cuadrada':
+            carats = length * width * depth * 0.0027 * 1.6;
+            break;
+        case 'corazón':
+            carats = length * width * depth * 0.0027;
+            break;
+        default:
+            alert('Por favor selecciona una forma válida.');
+            return;
+    }
 
     carats = Math.round(carats * 100) / 100;
 
-    const resultElement = document.getElementById('caratResult');
     document.getElementById('caratValue').textContent = `${carats} ct`;
     document.getElementById('dimensionText').textContent = `Dimensiones: ${length}mm × ${width}mm × ${depth}mm`;
-    resultElement.classList.remove('hidden');
+    document.getElementById('caratResult').classList.remove('hidden');
+}
+
 
     updateDimensionDisplay(length, width, depth, carats);
 }
