--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Mapa interactivo de zonas productoras de esmeraldas en Colombia</h3>
                 <div class="map-image-container bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center" style="height: 400px;">
                     <!-- Aquí puedes reemplazar con tu imagen de mapa -->
-                    <img id="mapImage" src="https://via.placeholder.com/800x500?text=Insertar+Mapa+Ilustrado" alt="Mapa de zonas esmeralderas de Colombia" class="w-full h-full object-contain">
+                    <img id="mapImage" src="https://i.imgur.com/LXoEDkw.jpeg/800x500?text=Insertar+Mapa+Ilustrado" alt="Mapa de zonas esmeralderas de Colombia" class="w-full h-full object-contain">
                 </div>
                 <div class="mt-4 grid md:grid-cols-3 gap-4">
                     <div class="bg-emerald-50 p-3 rounded-lg">
