--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                         
                         <p>En la cultura islámica, el verde es el color sagrado del Islam, y las esmeraldas eran consideradas símbolos de poder y protección. Muchos manuscritos antiguos mencionan esmeraldas como regalos entre monarcas.</p>
                         
-                        <img src="https://via.placeholder.com/500x300?text=Historia+de+las+Esmeraldas" alt="Historia de las esmeraldas" class="rounded-lg shadow mt-4 w-full">
+                        <img src="https://i.imgur.com/Pjpx4Kq.jpeg/500x300?text=Historia+de+las+Esmeraldas" alt="Historia de las esmeraldas" class="rounded-lg shadow mt-4 w-full">
                     </div>
                 </div>
 
@@ -639,7 +639,7 @@
                             </div>
                         </div>
                     </div>
-                    <img src="https://via.placeholder.com/500x200?text=Tipos+de+Tallado" alt="Tipos de tallado" class="rounded-lg shadow mt-4 w-full">
+                    <img src="https://i.imgur.com/VohlK8b.jpeg/500x200?text=Tipos+de+Tallado" alt="Tipos de tallado" class="rounded-lg shadow mt-4 w-full">
                 </div>
 
                 <!-- Colombian vs Other Emeralds -->
