--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <div>
                                 <h4 class="text-xl font-medium text-emerald-600 mb-2">Espectroscopía</h4>
                                 <p class="text-gray-700">Identificación de elementos cromóforos (Cr, V, Fe) que determinan el color.</p>
-                                <img src="https://via.placeholder.com/600x200?text=Espectroscopia" alt="Espectroscopía" class="mt-2 rounded-lg shadow w-full max-w-md">
+                                <img src="https://https://i.imgur.com/Q0xYe8n.png/600x200?text=Espectroscopia" alt="Espectroscopía" class="mt-2 rounded-lg shadow w-full max-w-md">
                             </div>
                         </div>
 
