--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                             <li>Brillo vítreo característico</li>
                             <li>Reacción específica bajo luz UV</li>
                         </ul>
-                        <img src="https://via.placeholder.com/400x300?text=Esmeralda+Autentica" alt="Esmeralda auténtica" class="rounded-lg shadow">
+                        <img src="https://i.imgur.com/LEr8Lrr.png/400x300?text=Esmeralda+Autentica" alt="Esmeralda auténtica" class="rounded-lg shadow">
                     </div>
                     <div>
                         <h4 class="text-xl font-medium text-emerald-600 mb-2">Esmeralda sintética/imitativa</h4>
@@ -338,7 +338,7 @@
                             <li>Burbujas de aire (en imitaciones de vidrio)</li>
                             <li>Patrones de crecimiento anómalos</li>
                         </ul>
-                        <img src="https://via.placeholder.com/400x300?text=Esmeralda+Sintetica" alt="Esmeralda sintética" class="rounded-lg shadow">
+                        <img src="https://i.imgur.com/yKrbvab.png/400x300?text=Esmeralda+Sintetica" alt="Esmeralda sintética" class="rounded-lg shadow">
                     </div>
                 </div>
             </div>
