--- a/index.html
+++ b/index.html
@@ -550,12 +550,22 @@
             </div>
 
             <!-- Emerald Production Map -->
-            <div>
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Mapa interactivo de zonas productoras de esmeraldas en Colombia</h3>
-                <div class="map-image-container bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center" style="height: 400px;">
-                    <!-- Aquí puedes reemplazar con tu imagen de mapa -->
-                    <img id="mapImage" src="https://i.imgur.com/LXoEDkw.jpeg/600x200?text=Insertar+Mapa+Ilustrado" alt="Mapa de zonas esmeralderas de Colombia" class="w-full h-full object-contain">
-                </div>
+<div>
+    <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">
+        Mapa interactivo de zonas productoras de esmeraldas en Colombia
+    </h3>
+    
+    <div class="map-image-container bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img 
+            id="mapImage" 
+            src="https://i.imgur.com/LXoEDkw.jpeg" 
+            alt="Mapa de zonas esmeralderas de Colombia" 
+            class="max-w-full h-auto object-contain"
+            style="aspect-ratio: 3 / 2;"
+        >
+    </div>
+</div>
+
                 <div class="mt-4 grid md:grid-cols-3 gap-4">
                     <div class="bg-emerald-50 p-3 rounded-lg">
                         <h4 class="font-semibold text-emerald-700 mb-1">Muzo</h4>
