--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
             <!-- Gemological Glossary -->
             <div class="mb-10">
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Glosario gemológico ampliado</h3>
+                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Glosario gemológico</h3>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="text-lg font-medium text-emerald-600 mb-2">Inclusiones (Jardín)</h4>
