--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
             <!-- Step by step analysis process -->
             <div class="mb-10">
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Proceso de análisis gemológico paso a paso</h3>
+                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Nuestro proceso de análisis gemológico paso a paso</h3>
                 <div class="relative">
                     <!-- Process Steps -->
                     <div class="flex flex-col space-y-8">
@@ -552,7 +552,7 @@
             <!-- Emerald Production Map -->
 <div>
     <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">
-        Mapa interactivo de zonas productoras de esmeraldas en Colombia
+        Mapa de zonas productoras de esmeraldas en Colombia
     </h3>
     
     <div class="map-image-container bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
