--- a/index.html
+++ b/index.html
@@ -749,9 +749,9 @@
                 <div>
                     <h3 class="text-xl font-bold mb-4">Contacto</h3>
                     <ul class="space-y-2">
-                        <li class="flex items-center"><i class="fas fa-map-marker-alt mr-2"></i> Carrera 7 # 12-45, Bogotá, Colombia</li>
+                        <li class="flex items-center"><i class="fas fa-map-marker-alt mr-2"></i>Bogotá, Medellin</li>
                         <li class="flex items-center"><i class="fas fa-phone-alt mr-2"></i> +57 300 123 4567</li>
-                        <li class="flex items-center"><i class="fas fa-envelope mr-2"></i> info@joyeriaesmeraldas.com</li>
+                        <li class="flex items-center"><i class="fas fa-envelope mr-2"></i> esmeraldartee@gmail.com</li>
                         <li class="flex items-center"><i class="fas fa-clock mr-2"></i> Lunes a Viernes: 9am - 6pm</li>
                     </ul>
                 </div>
