--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                     <h3 class="text-xl font-bold mb-4">Contacto</h3>
                     <ul class="space-y-2">
                         <li class="flex items-center"><i class="fas fa-map-marker-alt mr-2"></i>Bogotá, Medellin</li>
-                        <li class="flex items-center"><i class="fas fa-phone-alt mr-2"></i> +57 300 123 4567</li>
+                        <li class="flex items-center"><i class="fas fa-phone-alt mr-2"></i> +57 3184848399</li>
                         <li class="flex items-center"><i class="fas fa-envelope mr-2"></i> esmeraldartee@gmail.com</li>
                         <li class="flex items-center"><i class="fas fa-clock mr-2"></i> Lunes a Viernes: 9am - 6pm</li>
                     </ul>
